add jvm option